// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test auth reducer should confirm user's adding 1`] = `
Object {
  "accessToken": null,
  "autoLogin": true,
  "errorMessage": "",
  "isAuthenticated": null,
  "name": "testUser",
  "refreshToken": null,
  "userId": "",
}
`;

exports[`test auth reducer should confirm user's authentication 1`] = `
Object {
  "accessToken": null,
  "autoLogin": null,
  "errorMessage": "",
  "isAuthenticated": true,
  "name": "",
  "refreshToken": null,
  "userId": "",
}
`;

exports[`test auth reducer should get message about a problem with authentication 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "accessToken": null,
  "autoLogin": null,
  "errorMessage": undefined,
  "isAuthenticated": null,
  "name": "",
  "refreshToken": null,
  "userId": "",
}
`;

exports[`test auth reducer should get message about user's login fail 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "accessToken": null,
  "autoLogin": null,
  "errorMessage": undefined,
  "isAuthenticated": null,
  "name": "",
  "refreshToken": null,
  "userId": "",
}
`;

exports[`test auth reducer should login user 1`] = `
Object {
  "0": "1",
  "1": "1",
  "10": "3",
  "11": "3",
  "12": "3",
  "13": "3",
  "14": "-",
  "15": "4",
  "16": "4",
  "17": "4",
  "18": "4",
  "2": "1",
  "3": "1",
  "4": "-",
  "5": "2",
  "6": "2",
  "7": "2",
  "8": "2",
  "9": "-",
  "accessToken": null,
  "autoLogin": true,
  "errorMessage": "",
  "isAuthenticated": null,
  "name": "testUser",
  "refreshToken": null,
  "userId": undefined,
}
`;

exports[`test auth reducer should logout user 1`] = `
Object {
  "accessToken": null,
  "autoLogin": null,
  "errorMessage": "",
  "isAuthenticated": false,
  "name": null,
  "refreshToken": null,
  "remember": false,
  "userId": "",
}
`;
